# PyQt-Fluent-Widgets

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: Bug.yml  Feature.yml  bug_report.md
.github/workflows/: publish.yml
app/common/: icon.py  translator.py
app/view/: basic_input_interface.py  dialog_interface.py  gallery_interface.py  home_interface.py  layout_interface.py  main_window.py  material_interface.py  scroll_interface.py  text_interface.py  title_bar.py
docs/: .readthedocs.yaml  README_zh.md  requirements.txt
docs/source/: conf.py  designer.md  designer.rst  gallery.md  icon.md  index.rst  license.md  navigation.md  quick-start.md  quick-start.rst  see-also.md  settings.md  settings.rst  support.md  theme.md
examples/acrylic_brush/: demo.py
examples/acrylic_label/: demo.py
examples/avatar_widget/: demo.py
examples/breadcrumb_bar/: demo.py
examples/button/: demo.py
examples/calendar_picker/: demo.py
examples/card_widget/: demo.py
examples/check_box/: demo.py
examples/clock/: demo.py  resource_rc.py
examples/code_block/: demo.py
plugins/: basic_input_plugin.py  container_plugin.py  date_time_plugin.py  label_plugin.py  navigation_plugin.py  plugin_base.py  register_widgets.py  registerplugin.py  status_info_plugin.py  task_menu_factory.py  task_menu_fatcory.py  text_plugin.py  toolbar_plugin.py  view_plugin.py
qfluentwidgets/: __init__.py
qtfluentwidgets/: __init__.py
tools/: deploy.py  designer.py  register_widgets.py
(+761 files in other folders)
